--- a/.github/workflows/run-addon.yml
+++ b/.github/workflows/run-addon.yml
@@ -5,3 +5,6 @@ on: repository_dispatch
 jobs:
   Run-Add-On:
     uses: MuckRock/documentcloud-addon-workflows/.github/workflows/run-addon.yml@v1
+    with:
+      timeout: 360
+      apt-packages: libimage-exiftool-perl
